# FREDML

./: .coverage  .gitattributes  .gitignore  .pre-commit-config.yaml  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  Dockerfile  ENTERPRISE_GRADE_IMPROVEMENTS.md  LICENSE  MATH_ISSUES_ANALYSIS.md  Makefile  README.md  STREAMLIT_CLOUD_TROUBLESHOOTING.md  debug_forecasting.py  integration_report.json  pyproject.toml  requirements.txt  simple_local_test.py  streamlit_app.py  system_test_report.json  test_alignment_divergence.py  test_arima.py  test_enhanced_app.py  test_local_app.py  test_real_analytics.py  test_report.json
.github/workflows/: ci-cd.yml  pull-request.yml  release.yml  scheduled.yml
.streamlit/: secrets.toml
backup/redundant_files/: alignment_divergence_insights.txt  check_deployment.py  debug_analytics.py  debug_data_structure.py  test_analytics.py  test_analytics_fix.py  test_app.py  test_app_features.py  test_data_accuracy.py  test_data_validation.py  test_dynamic_scoring.py  test_fixes_demonstration.py  test_fred_frequency_issue.py  test_frontend_data.py  test_gdp_scale.py  test_imports.py  test_math_issues.py  test_mathematical_fixes.py  test_mathematical_fixes_fixed.py  test_real_data_analysis.py
config/: __init__.py  pipeline.yaml  settings.py
data/exports/: comprehensive_analysis_report.txt  fred_data_20250710_223022.csv  fred_data_20250710_223149.csv  regression_summary.txt
deploy/docker/: docker-compose.dev.yml  docker-compose.prod.yml
deploy/kubernetes/: deployment.yaml
docs/: ADVANCED_ANALYTICS_SUMMARY.md  CI_CD_STATUS.md  CONVERSATION_SUMMARY.md  DEPLOYMENT_SUMMARY.md  INTEGRATION_SUMMARY.md
docs/ci-cd/: README.md
docs/deployment/: streamlit-cloud.md
frontend/: app.py  config.py  debug_fred_api.py  demo_data.py  fred_api_client.py  setup_fred.py  test_fred_api.py
helm/: Chart.yaml
infrastructure/alerts/: alerts.yml
infrastructure/eventbridge/: quarterly-rule.yaml
infrastructure/lambda/: function.yaml
infrastructure/monitoring/: prometheus.yml
infrastructure/s3/: bucket.yaml
kubernetes/: deployment.yaml
monitoring/: prometheus.yml
scripts/: aws_grant_e2e_policy.sh  cleanup_redundant_files.py  comprehensive_demo.py  deploy_aws.py  deploy_complete.py  dev_setup.py  health_check.py  integrate_and_test.py  prepare_for_github.py  run_advanced_analytics.py  run_e2e_tests.py  run_eda.py  run_fred_pipeline.py  run_segmentation.py  run_statistical_modeling.py  run_tests.py  run_time_series.py  setup_venv.py  simple_demo.py  streamlit_demo.py  test_complete_system.py  test_dev.py  test_streamlit_ui.py  test_visualizations.py
src/: __init__.py  main.py
src/analysis/: __init__.py  advanced_analytics.py  alignment_divergence_analyzer.py  comprehensive_analytics.py  comprehensive_analytics_fixed.py  economic_analyzer.py  economic_forecasting.py  economic_segmentation.py  mathematical_fixes.py  statistical_modeling.py
src/core/: __init__.py  base_pipeline.py  enhanced_fred_client.py  fred_client.py  fred_pipeline.py
src/lambda/: lambda_function.py  requirements.txt
src/lambda_fn/: lambda_function.py
src/utils/: __init__.py  examples.py
src/visualization/: __init__.py  chart_generator.py  enhanced_charts.py  (+1 more)
tests/: run_tests.py  test_fred_api.py  test_fredapi_library.py
(+11 files in other folders)
